listings/ch03-common-programming-concepts/output-only-01-no-type-annotations/output.txt
$ cargo build
   Compiling annotazione_senza_type v0.1.0 (file:///progetti/annotazione_senza_type)

error[E0284]: type annotations needed
 --> src/main.rs:3:9
  |
3 |     let ipotesi = "42".parse().expect("Non è un numero!");
  |         ^^^^^^^        ----- type must be known at this point
  |
  = note: cannot satisfy `<_ as FromStr>::Err == _`
help: consider giving `ipotesi` an explicit type
  |
3 |     let ipotesi: /* Type */ = "42".parse().expect("Non è un numero!");
  |                ++++++++++++

For more information about this error, try `rustc --explain E0284`.
error: could not compile `annotazione_senza_type` (bin "annotazione_senza_type") due to 1 previous error; 1 warning emitted
